[workspace]
members = [
    "crates/async-cuda-core",
    "crates/async-cuda-npp",
    "crates/async-tensorrt",
]

[workspace.package]
categories = ["asynchronous"]
edition = "2021"
version = "0.3.0"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
repository = "https://github.com/oddity-ai/async-cuda"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-cuda-core = { version = "0.3.0" }
cpp = "0.5"
cpp_build = "0.5"
futures = { version = "0.3", default-features = false, features = ["std"] }
ndarray = { version = "0.15" }
once_cell = "1.17"
tempfile = "3.4"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "test-util",
    "time",
] }
tokio-test = { version = "0.4" }
tracing = "0.1"
