[package]
name = "async-cuda"
description = "Async CUDA for Rust."
keywords = ["async", "nvidia", "cuda", "gpu", "npp"]
readme = "README.md"
categories = ["asynchronous"]
edition = "2021"
version = "0.5.4"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
repository = "https://github.com/oddity-ai/async-cuda"
license = "MIT OR Apache-2.0"

[dependencies]
cpp = "0.5"
ndarray = { version = "0.15", optional = true }
once_cell = "1.17"

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "test-util",
    "time",
] }
tokio-test = { version = "0.4" }

[build-dependencies]
cpp_build = "0.5"

[features]
npp = []
npp-unstable = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "feature=\"docs-only\""]
