[package]
name = "async-cuda-npp"
description = "Async NVIDIA Performance Primitives for Rust."
keywords = ["async", "nvidia", "cuda", "gpu", "npp"]
readme = "README.md"
categories.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-cuda-core = { workspace = true }
cpp = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cpp_build = { workspace = true }

[features]
unstable = []
