[package]
name = "async-tensorrt"
description = "Async TensorRT for Rust."
keywords = ["async", "nvidia", "cuda", "gpu", "tensorrt"]
readme = "README.md"
categories.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-cuda-core = { workspace = true }
cpp = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cpp_build = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg feature=\"docs-only\""]
